--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-validator": "^6.6.1",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
