--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jsonschema": "^1.2.8",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "apidoc-plugin-schema": "^0.1.8",
