--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "joi": "^17.2.1",
     "jsonschema": "^1.2.8",
     "sqlite3": "^4.0.6",
     "winston": "^3.3.3"
